see that file and the CVS log for more historic information.  The
entire history of the project is available through CVS.

----------------------------------------------------------------------
--- 2005-04-XX  Release 7.2.1                                      ---
----------------------------------------------------------------------

* fixed non-square window mged illumination selection - Sean Morrison


----------------------------------------------------------------------
--- 2005-03-05  Release 7.2.0                                      ---
----------------------------------------------------------------------

* fixed libpng link bug on Irix64bit - Lee Butler
* fixed locale build bug - Thierry Thomas & Pedro Giffuni
* fixed g-iges stdout header bug - Manfred Spraul
* fixed minimal BoT disappearance bug  - Lee Butler
* Sketch Editor now starts with an empty sketch - Sean Morrison
* fixed need for brlcad_root on default configure - Sean Morrison
* update to zlib 1.2.2 - Sean Morrison


----------------------------------------------------------------------
--- 2005-01-25  Release 7.0.4                                      ---
----------------------------------------------------------------------

This patch release update fixes several build issues experienced on
various platforms including Gentoo, Debian, and Mac OS X.

* provided libutahrle (urt) vulnerability patch - Pedro Giffuni
* fixed missing vgr results when missing dc - Sean Morrison
* update of Utah Raster Toolkit from 3.0 to 3.1b1 - Sean Morrison
* update of libpng from 1.2.5 to 1.2.8 - Sean Morrison
* gentoo build fixes - Cliff Yapp


----------------------------------------------------------------------
--- 2005-01-07  Release 7.0.2                                      ---
----------------------------------------------------------------------

This release marks the first source and binary distribution of BRL-CAD
as an Open Source project.  With the exception of a few minor bug