@@ -212,7 +212,8 @@ ogl_open(Tcl_Interp *interp, int argc, char **argv)
   int make_square = -1;
   int ndevices;
   int nclass = 0;
-  XDeviceInfoPtr olist, list;
+  int unused;
+  XDeviceInfoPtr olist = NULL, list = NULL;
   XDevice *dev;
   XEventClass e_class[15];
   XInputClassInfo *cip;
@@ -431,9 +432,9 @@ ogl_open(Tcl_Interp *interp, int argc, char **argv)
    * Take a look at the available input devices. We're looking
    * for "dial+buttons".
    */
-  olist = list =
-    (XDeviceInfoPtr)XListInputDevices(((struct dm_xvars *)dmp->dm_vars.pub_vars)->dpy,
-				      &ndevices);
+  if (XQueryExtension(((struct dm_xvars *)dmp->dm_vars.pub_vars)->dpy, "XInputExtension", &unused, &unused, &unused)) {
+      olist = list = (XDeviceInfoPtr)XListInputDevices(((struct dm_xvars *)dmp->dm_vars.pub_vars)->dpy, &ndevices);
+  }
 
   /* IRIX 4.0.5 bug workaround */
   if( list == (XDeviceInfoPtr)NULL ||
