@@ -208,8 +208,9 @@ ogl_open(interp, argc, argv)
 #ifndef WIN32
   int j, k;
   int ndevices;
+  int unused;
   Display *tmp_dpy;
-  XDeviceInfoPtr olist, list;
+  XDeviceInfoPtr olist = NULL, list = NULL;
   XDevice *dev;
   XEventClass e_class[15];
   XInputClassInfo *cip;
@@ -503,9 +504,9 @@ ogl_open(interp, argc, argv)
    * Take a look at the available input devices. We're looking
    * for "dial+buttons".
    */
-  olist = list =
-    (XDeviceInfoPtr)XListInputDevices(((struct dm_xvars *)dmp->dm_vars.pub_vars)->dpy,
-				      &ndevices);
+  if (XQueryExtension(((struct dm_xvars *)dmp->dm_vars.pub_vars)->dpy, "XInputExtension", &unused, &unused, &unused)) {
+      olist = list = (XDeviceInfoPtr)XListInputDevices(((struct dm_xvars *)dmp->dm_vars.pub_vars)->dpy, &ndevices);
+  }
 
   /* IRIX 4.0.5 bug workaround */
   if( list == (XDeviceInfoPtr)NULL ||
