@@ -10,6 +10,7 @@ entire history of the project is available through CVS.
 --- 2005-04-XX  Release 7.2.1                                      ---
 ----------------------------------------------------------------------
 
+* quelled XInputExtension warning on mged startup - Sean Morrison
 * fixed non-square window mged illumination selection - Sean Morrison
 
 
